Fix header's z-index

--- a/src/layout/scss/index.scss
+++ b/src/layout/scss/index.scss
@@ -14,6 +14,7 @@ body {
   position: fixed;
   top: 0;
   min-width: 320px;
+  z-index: 2;
   .header-content {
     margin: 0 auto 0 auto;
     max-width: $page-width;
@@ -48,6 +49,7 @@ body {
   max-width: $page-width;
   min-width: 320px;
   margin: 72px auto 0 auto;
+  z-index: 1;
 }
 
 .list {
